[project]
name = "conductor"
version = "0.1.0"
description = "Home Assistant oriented workflow engine"
requires-python = ">=3.13"

authors = [{ name = "Erwin Douna", email = "e.douna@gmail.com" }]
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Erwin Douna", email = "e.douna@gmail.com" }]
keywords = [
    "conductor",
    "api",
    "async",
    "workflow",
    "home assistant",
]

dependencies = [
  "fastapi[standard]>=0.128",
  "uvicorn[standard]>=0.29",
  "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
