[project]
name = "conductor"
version = "0.1.0"
description = "Home Assistant oriented workflow engine"
requires-python = ">=3.13"

authors = [{ name = "Erwin Douna", email = "e.douna@gmail.com" }]
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Erwin Douna", email = "e.douna@gmail.com" }]
keywords = [
    "conductor",
    "api",
    "async",
    "workflow",
    "home assistant",
]

dependencies = [
  "aiohttp>=3.13.3",
  "asyncio>=4.0.0",
  "fastapi[standard]>=0.128",
  "pydantic>=2.12.5",
  "uvicorn[standard]>=0.29",
  "websockets>=15.0.1",
]

[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
  "mypy",
  "pylint",
  "pytest",
  "pytest-cov",
  "codespell",
  "yamllint",
  "pytest>=9.0.2",
  "syrupy>=5.0.0",
  "pytest-asyncio>=1.3.0",
  "covdefaults>=2.3",
  "aresponses>=3.0.0",
  "pytest-aiohttp>=1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=conductor --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["conductor"]
omit = [
  "tests/*",
  "*/tests/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
